# deterministic-fraud-detection-coding-challenge

./: Dockerfile.base  Dockerfile.client  Dockerfile.dev  Dockerfile.service  Makefile  README.md  docker-compose.yml  emulate_client.py  pyproject.toml
data/: high_fraud_areas.geojson
src/client/: client.py
src/service/: service.py  settings.py
tests/unit/: tests.py
